syntax = "proto3";

package ru.flounder.auth.grpc;

option java_multiple_files = true;
option java_package = "ru.flounder.auth.grpc";
option java_outer_classname = "TokenValidator";

service TokenValidationService {
  rpc ValidateToken (TokenValidateRequest) returns (TokenValidateResponse) {
  }
}

message TokenValidateRequest {
  string token = 1;
}

message TokenValidateResponse {
  bool valid = 1;
}
